// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button matches snapshot 1`] = `
<DocumentFragment>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-sKeyg-size-md c-jkTMls-dCRXRO-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-iDvDeR-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all colors 1`] = `
<DocumentFragment>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-sKeyg-size-md c-jkTMls-dCRXRO-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-iDvDeR-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-bmmCCE-color-secondary c-jkTMls-sKeyg-size-md c-jkTMls-dCRXRO-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-bXKVvx-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-cbktrZ-color-success c-jkTMls-sKeyg-size-md c-jkTMls-dCRXRO-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-fMjTrh-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-fWqKPQ-color-warning c-jkTMls-sKeyg-size-md c-jkTMls-dCRXRO-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-dKsfPN-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-cgBQIK-color-error c-jkTMls-sKeyg-size-md c-jkTMls-dCRXRO-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-gURxYt-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all sizes 1`] = `
<DocumentFragment>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-cmVdgU-size-sm c-jkTMls-dCRXRO-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-iDvDeR-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-sKeyg-size-md c-jkTMls-dCRXRO-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-iDvDeR-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-lXiLo-size-lg c-jkTMls-dCRXRO-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-iDvDeR-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;

exports[`components/Button renders all variants 1`] = `
<DocumentFragment>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-sKeyg-size-md c-jkTMls-dCRXRO-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-iDvDeR-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-sKeyg-size-md c-jkTMls-dCRXRO-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-iLqsvF-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-sKeyg-size-md c-jkTMls-dCRXRO-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-fPnwvc-cv decaButton-root"
    role="button"
  >
    Label
  </button>
  <button
    class="c-jkTMls c-jkTMls-jsOpSy-color-primary c-jkTMls-sKeyg-size-md c-jkTMls-dCRXRO-isDisabled-false c-jkTMls-cycqzJ-pill-false c-jkTMls-fSTVLk-cv decaButton-root"
    role="button"
  >
    Label
  </button>
</DocumentFragment>
`;
